# voice-to-text-assistant

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/voice_to_markdown/: __init__.py  cli.py  recorder.py  transcribers.py
