[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-to-text-assistant"
version = "0.1.0"
description = "CLI assistant that records German or English speech and saves Markdown transcripts"
readme = "README.md"
authors = [
    { name = "AI Assistant" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "numpy>=1.24",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
local = [
    "faster-whisper>=1.0",
]
api = [
    "openai>=1.13",
]

[project.scripts]
voice-to-markdown = "voice_to_markdown.cli:main"
